@@ -19,7 +19,7 @@
 package org.apache.flink.table.planner.operations;
 
 import org.apache.flink.core.testutils.FlinkAssertions;
-import org.apache.flink.sql.parser.ddl.SqlCreateTable;
+import org.apache.flink.sql.parser.ddl.table.SqlCreateTable;
 import org.apache.flink.sql.parser.error.SqlValidateException;
 import org.apache.flink.table.api.DataTypes;
 import org.apache.flink.table.api.Schema;
@@ -41,6 +41,7 @@ import org.apache.flink.table.catalog.IntervalFreshness;
 import org.apache.flink.table.catalog.ObjectIdentifier;
 import org.apache.flink.table.catalog.ObjectPath;
 import org.apache.flink.table.catalog.ResolvedCatalogTable;
+import org.apache.flink.table.catalog.ResolvedSchema;
 import org.apache.flink.table.catalog.TableChange;
 import org.apache.flink.table.catalog.TableDistribution;
 import org.apache.flink.table.catalog.TableDistribution.Kind;
@@ -104,6 +105,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.apache.flink.table.api.Expressions.$;
+import static org.apache.flink.table.planner.operations.SqlDdlToOperationConverterTest.TestItem.createTestItem;
 import static org.apache.flink.table.planner.utils.OperationMatchers.entry;
 import static org.apache.flink.table.planner.utils.OperationMatchers.isCreateTableOperation;
 import static org.apache.flink.table.planner.utils.OperationMatchers.partitionedBy;
@@ -807,10 +809,10 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                                 + " ROW<`tmstmp` TIMESTAMP(3)>.");
     }
 
-    @Test // TODO: tweak the tests when FLINK-13604 is fixed.
+    @Test
     void testCreateTableWithFullDataTypes() {
         final List<TestItem> testItems =
-                Arrays.asList(
+                List.of(
                         createTestItem("CHAR", DataTypes.CHAR(1)),
                         createTestItem("CHAR NOT NULL", DataTypes.CHAR(1).notNull()),
                         createTestItem("CHAR NULL", DataTypes.CHAR(1)),
@@ -844,10 +846,8 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                         createTestItem("DATE", DataTypes.DATE()),
                         createTestItem("TIME", DataTypes.TIME()),
                         createTestItem("TIME WITHOUT TIME ZONE", DataTypes.TIME()),
-                        // Expect to be TIME(3).
-                        createTestItem("TIME(3)", DataTypes.TIME()),
-                        // Expect to be TIME(3).
-                        createTestItem("TIME(3) WITHOUT TIME ZONE", DataTypes.TIME()),
+                        createTestItem("TIME(3)", DataTypes.TIME(3)),
+                        createTestItem("TIME(3) WITHOUT TIME ZONE", DataTypes.TIME(3)),
                         createTestItem("TIMESTAMP", DataTypes.TIMESTAMP(6)),
                         createTestItem("TIMESTAMP WITHOUT TIME ZONE", DataTypes.TIMESTAMP(6)),
                         createTestItem("TIMESTAMP(3)", DataTypes.TIMESTAMP(3)),
@@ -951,11 +951,15 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         final CalciteParser parser = getParserBySqlDialect(SqlDialect.DEFAULT);
         SqlNode node = parser.parse(sql);
         assertThat(node).isInstanceOf(SqlCreateTable.class);
-        Operation operation =
-                SqlNodeToOperationConversion.convert(planner, catalogManager, node).get();
-        TableSchema schema = ((CreateTableOperation) operation).getCatalogTable().getSchema();
-        Object[] expectedDataTypes = testItems.stream().map(item -> item.expectedType).toArray();
-        assertThat(schema.getFieldDataTypes()).isEqualTo(expectedDataTypes);
+        final Optional<Operation> convert =
+                SqlNodeToOperationConversion.convert(planner, catalogManager, node);
+        assertThat(convert).isPresent();
+        Operation operation = convert.get();
+        ResolvedSchema schema =
+                ((CreateTableOperation) operation).getCatalogTable().getResolvedSchema();
+        List<DataType> expectedDataTypes =
+                testItems.stream().map(item -> item.expectedType).collect(Collectors.toList());
+        assertThat(schema.getColumnDataTypes()).isEqualTo(expectedDataTypes);
     }
 
     @Test
@@ -1117,19 +1121,24 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         // test alter table options
         checkAlterNonExistTable("alter table %s nonexistent set ('k1' = 'v1', 'K2' = 'V2')");
         Operation operation =
-                parse("alter table if exists cat1.db1.tb1 set ('k1' = 'v1', 'K2' = 'V2')");
+                parse(
+                        "alter table if exists cat1.db1.tb1 set ('k1' = 'v1', 'k2' = 'v2', 'K2' = 'V1', 'K2' = 'V2')");
         Map<String, String> expectedOptions = new HashMap<>();
         expectedOptions.put("connector", "dummy");
         expectedOptions.put("k", "v");
         expectedOptions.put("k1", "v1");
+        expectedOptions.put("k2", "v2");
         expectedOptions.put("K2", "V2");
 
         assertAlterTableOptions(
                 operation,
                 expectedIdentifier,
                 expectedOptions,
-                Arrays.asList(TableChange.set("k1", "v1"), TableChange.set("K2", "V2")),
-                "ALTER TABLE IF EXISTS cat1.db1.tb1\n  SET 'k1' = 'v1',\n  SET 'K2' = 'V2'");
+                List.of(
+                        TableChange.set("k1", "v1"),
+                        TableChange.set("k2", "v2"),
+                        TableChange.set("K2", "V2")),
+                "ALTER TABLE IF EXISTS cat1.db1.tb1\n  SET 'k1' = 'v1',\n  SET 'k2' = 'v2',\n  SET 'K2' = 'V2'");
 
         // test alter table reset
         checkAlterNonExistTable("alter table %s nonexistent reset ('k')");
@@ -1137,8 +1146,8 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         assertAlterTableOptions(
                 operation,
                 expectedIdentifier,
-                Collections.singletonMap("connector", "dummy"),
-                Collections.singletonList(TableChange.reset("k")),
+                Map.of("connector", "dummy"),
+                List.of(TableChange.reset("k")),
                 "ALTER TABLE IF EXISTS cat1.db1.tb1\n  RESET 'k'");
         assertThatThrownBy(() -> parse("alter table cat1.db1.tb1 reset ('connector')"))
                 .isInstanceOf(ValidationException.class)
@@ -1223,7 +1232,8 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         // rename nested column
         assertThatThrownBy(() -> parse("alter table tb1 rename e.f1 to e.f11"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type e.f1 is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f1` is not supported yet.");
 
         // rename column with duplicate name
         assertThatThrownBy(() -> parse("alter table tb1 rename c to a"))
@@ -1293,7 +1303,8 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         // drop a nested column
         assertThatThrownBy(() -> parse("alter table tb1 drop e.f2"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type e.f2 is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f2` is not supported yet.");
 
         // drop a column which generates a computed column
         assertThatThrownBy(() -> parse("alter table tb1 drop a"))
@@ -1354,15 +1365,20 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         prepareTable("tb1", 0);
         assertThatThrownBy(() -> parse("alter table tb1 drop primary key"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining("The base table does not define any primary key.");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table does not define any primary key.");
         assertThatThrownBy(() -> parse("alter table tb1 drop constraint ct"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining("The base table does not define any primary key.");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table does not define any primary key.");
         prepareTable("tb2", 1);
         assertThatThrownBy(() -> parse("alter table tb2 drop constraint ct2"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The base table does not define a primary key constraint named 'ct2'. Available constraint name: ['ct1'].");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table does not define a primary key constraint named 'ct2'. Available constraint name: ['ct1'].");
         checkAlterNonExistTable("alter table %s nonexistent drop primary key");
         checkAlterNonExistTable("alter table %s nonexistent drop constraint ct");
     }
@@ -1455,7 +1471,7 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                                     assertThat(
                                                     op.getCatalogMaterializedTable()
                                                             .getDefinitionFreshness())
-                                            .isEqualTo(IntervalFreshness.ofSecond("30"));
+                                            .isEqualTo(IntervalFreshness.ofSecond(30));
                                     assertThat(op.getCatalogMaterializedTable().getRefreshMode())
                                             .isSameAs(RefreshMode.CONTINUOUS);
                                 }),
@@ -1537,9 +1553,13 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                 "tb2", false, 1, TableDistribution.of(Kind.HASH, 1, List.of("a")), "SELECT 1");
 
         assertThatThrownBy(
-                        () ->
-                                parse(
-                                        "alter materialized table cat1.db1.tb2 add distribution into 3 buckets"))
+                        () -> {
+                            AlterMaterializedTableChangeOperation tableChangeOperation =
+                                    (AlterMaterializedTableChangeOperation)
+                                            parse(
+                                                    "alter materialized table cat1.db1.tb2 add distribution into 3 buckets");
+                            tableChangeOperation.getTableChanges();
+                        })
                 .isInstanceOf(ValidationException.class)
                 .hasMessageContaining(
                         "The current materialized table has already defined the distribution "
@@ -1578,7 +1598,9 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         prepareTable("tb1", false);
         assertThatThrownBy(() -> parse("alter table tb1 drop watermark"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining("The base table does not define any watermark strategy.");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table does not define any watermark strategy.");
         checkAlterNonExistTable("alter table %s nonexistent drop watermark");
     }
 
@@ -1640,16 +1662,19 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         // add an inner field to a nested row
         assertThatThrownBy(() -> parse("alter table tb1 add (e.f3 string)"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type e.f3 is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f3` is not supported yet.");
 
         // refer to a nested inner field
         assertThatThrownBy(() -> parse("alter table tb1 add (x string after e.f2)"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f2` is not supported yet.");
 
         assertThatThrownBy(() -> parse("alter table tb1 add (e.f3 string after e.f1)"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type e.f3 is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f3` is not supported yet.");
         checkAlterNonExistTable("alter table %s nonexistent add a bigint not null");
     }
 
@@ -1774,8 +1799,9 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
 
         assertThatThrownBy(() -> parse("alter table tb1 add primary key(c) not enforced"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table has already defined the primary key constraint [`a`]. "
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table has already defined the primary key constraint [`a`]. "
                                 + "You might want to drop it before adding a new one.");
 
         assertThatThrownBy(
@@ -1783,27 +1809,30 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                                 parse(
                                         "alter table tb1 add x string not null primary key not enforced"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table has already defined the primary key constraint [`a`]. "
-                                + "You might want to drop it before adding a new one");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table has already defined the primary key constraint [`a`]. "
+                                + "You might want to drop it before adding a new one.");
 
         // the original table has composite pk
         prepareTable("tb2", 2);
 
         assertThatThrownBy(() -> parse("alter table tb2 add primary key(c) not enforced"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table has already defined the primary key constraint [`a`, `b`]. "
-                                + "You might want to drop it before adding a new one");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table has already defined the primary key constraint [`a`, `b`]. "
+                                + "You might want to drop it before adding a new one.");
 
         assertThatThrownBy(
                         () ->
                                 parse(
                                         "alter table tb2 add x string not null primary key not enforced"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table has already defined the primary key constraint [`a`, `b`]. "
-                                + "You might want to drop it before adding a new one");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table has already defined the primary key constraint [`a`, `b`]. "
+                                + "You might want to drop it before adding a new one.");
 
         // the original table does not define pk
         prepareTable("tb3", 0);
@@ -1945,8 +1974,9 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
 
         assertThatThrownBy(() -> parse("alter table tb2 add watermark for ts as ts"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table has already defined the watermark strategy "
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table has already defined the watermark strategy "
                                 + "`ts` AS ts - interval '5' seconds. "
                                 + "You might want to drop it before adding a new one.");
         checkAlterNonExistTable("alter table %s nonexistent add watermark for ts as ts");
@@ -2096,16 +2126,19 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         // modify an inner field to a nested row
         assertThatThrownBy(() -> parse("alter table tb2 modify (e.f0 string)"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type e.f0 is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f0` is not supported yet.");
 
         // refer to a nested inner field
         assertThatThrownBy(() -> parse("alter table tb2 modify (g string after e.f2)"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f2` is not supported yet.");
 
         assertThatThrownBy(() -> parse("alter table tb2 modify (e.f0 string after e.f1)"))
                 .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Alter nested row type e.f0 is not supported yet.");
+                .hasMessageContaining(
+                        "Altering the nested row type `e`.`f0` is not supported yet.");
         checkAlterNonExistTable("alter table %s nonexistent modify a int first");
     }
 
@@ -2270,8 +2303,9 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                                 parse(
                                         "alter table tb1 modify constraint ct primary key (b) not enforced"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table does not define any primary key constraint. You might want to add a new one.");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table does not define any primary key constraint. You might want to add a new one.");
 
         prepareTable("tb2", 1);
 
@@ -2430,8 +2464,9 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                                 parse(
                                         "alter table tb1 modify watermark for a as to_timestamp(a) - interval '1' minute"))
                 .isInstanceOf(ValidationException.class)
-                .hasMessageContaining(
-                        "The current table does not define any watermark. You might want to add a new one.");
+                .hasMessage(
+                        "Failed to execute ALTER TABLE statement.\n"
+                                + "The current table does not define any watermark. You might want to add a new one.");
 
         prepareTable("tb2", true);
 
@@ -2689,18 +2724,6 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
 
     // ~ Tool Methods ----------------------------------------------------------
 
-    private static TestItem createTestItem(Object... args) {
-        assertThat(args).hasSize(2);
-        final String testExpr = (String) args[0];
-        TestItem testItem = TestItem.fromTestExpr(testExpr);
-        if (args[1] instanceof String) {
-            testItem.withExpectedError((String) args[1]);
-        } else {
-            testItem.withExpectedType(args[1]);
-        }
-        return testItem;
-    }
-
     private CatalogTable prepareTable(boolean hasConstraint) throws Exception {
         return prepareTable("tb1", hasConstraint ? 1 : 0);
     }
@@ -2853,7 +2876,7 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
                         .partitionKeys(
                                 hasPartition ? Arrays.asList("b", "c") : Collections.emptyList())
                         .options(Collections.unmodifiableMap(options))
-                        .freshness(IntervalFreshness.ofHour("2"))
+                        .freshness(IntervalFreshness.ofHour(2))
                         .logicalRefreshMode(LogicalRefreshMode.CONTINUOUS)
                         .refreshMode(RefreshMode.CONTINUOUS)
                         .refreshStatus(RefreshStatus.ACTIVATED)
@@ -2885,7 +2908,8 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
         assertThat(alterTableOptionsOperation.getTableIdentifier()).isEqualTo(expectedIdentifier);
         assertThat(alterTableOptionsOperation.getNewTable().getOptions())
                 .isEqualTo(expectedOptions);
-        assertThat(expectedChanges).isEqualTo(alterTableOptionsOperation.getTableChanges());
+        assertThat(expectedChanges)
+                .containsExactlyInAnyOrderElementsOf(alterTableOptionsOperation.getTableChanges());
         assertThat(alterTableOptionsOperation.asSummaryString()).isEqualTo(expectedSummary);
     }
 
@@ -2924,27 +2948,34 @@ class SqlDdlToOperationConverterTest extends SqlNodeToOperationConversionTestBas
 
     // ~ Inner Classes ----------------------------------------------------------
 
-    private static class TestItem {
+    static class TestItem {
         private final String testExpr;
-        @Nullable private Object expectedType;
-        @Nullable private String expectedError;
+        @Nullable private final DataType expectedType;
+        @Nullable private final String expectedError;
 
-        private TestItem(String testExpr) {
+        private TestItem(
+                final String testExpr,
+                @Nullable final DataType expectedType,
+                @Nullable final String expectedError) {
             this.testExpr = testExpr;
-        }
-
-        static TestItem fromTestExpr(String testExpr) {
-            return new TestItem(testExpr);
-        }
-
-        TestItem withExpectedType(Object expectedType) {
             this.expectedType = expectedType;
-            return this;
+            this.expectedError = expectedError;
         }
 
-        TestItem withExpectedError(String expectedError) {
-            this.expectedError = expectedError;
-            return this;
+        private TestItem(final String testExpr, @Nullable final DataType expectedType) {
+            this(testExpr, expectedType, null);
+        }
+
+        private TestItem(final String testExpr, @Nullable final String expectedError) {
+            this(testExpr, null, expectedError);
+        }
+
+        static TestItem createTestItem(String testExpr, DataType dataType) {
+            return new TestItem(testExpr, dataType);
+        }
+
+        static TestItem createTestItem(String testExpr, String expectedError) {
+            return new TestItem(testExpr, expectedError);
         }
 
         @Override
